--- a/app/src/main/res/layout/custom_list_music.xml
+++ b/app/src/main/res/layout/custom_list_music.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageSong"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
@@ -24,8 +24,8 @@
         android:layout_marginStart="16dp"
         android:text="Tên bài hát"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/imageSong"
+        app:layout_constraintTop_toTopOf="@+id/imageSong" />
 
     <TextView
         android:id="@+id/text1"
@@ -33,8 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Ca sĩ:"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/imageSong"
+        app:layout_constraintStart_toEndOf="@+id/imageSong"
         app:layout_constraintTop_toBottomOf="@+id/txtSongName" />
 
     <TextView
